--- a/node-js-playlist-master/views/partials/contact.ejs
+++ b/node-js-playlist-master/views/partials/contact.ejs
@@ -10,10 +10,11 @@
     <body>
         <% include partials/nav.ejs %>
         <h1>Contact Us!</h1>
-        <p>Contact the coolest cats on the web right now..</p>
-   <form id="contact-form">
+        <p>Contact the coolest cats on the web right here..</p>
+        
+   <form id="contact-form" method="POST" action="/contact">
        <label for="who">Who do you want to contact?</label>
-       <input type="text" name="who">
+       <input type="text" name="who" value="<%= qs.person %>">
        <label for="department">Which department?</label>
        <input type="text" name="department" value="<%= qs.dept %>">
        <label for="email">Your email</label>
